UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Call_Count__c.field-meta.xml
<CustomField>
    <fullName>Call_Count__c</fullName>
    <description>Used to tally the number of repeat contacts on the case.  Created for Charita Williams/Todd Bowser case  00690917</description>
    <inlineHelpText>Increment when repeat contact occurs regarding this case.</inlineHelpText>
    <label>Call Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>