UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Canada__c.field-meta.xml
<CustomField>
    <fullName>Canada__c</fullName>
    <label>Canada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>