UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Canceled_M6_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Canceled_M6_Due_Date__c</fullName>
    <label>Canceled M6 Due Date</label>
    <type>Date</type>
</CustomField>