UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Canceled_M6_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Canceled_M6_Order_Number__c</fullName>
    <label>Canceled M6 Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>