UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Cancellation_Charges_for3__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Charges_for3__c</fullName>
    <label>Cancellation Charges for</label>
    <length>30</length>
    <type>Text</type>
</CustomField>