UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Approver_of_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>CAP_Approver_of_Adjustment__c</fullName>
    <label>Approver of Adjustment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>