UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Breakdown_of_Charges_for_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>CAP_Breakdown_of_Charges_for_Adjustment__c</fullName>
    <label>Breakdown of Charges for Adjustment</label>
    <type>TextArea</type>
</CustomField>