UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_BTN_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CAP_BTN_Sequence__c</fullName>
    <label>BTN Sequence</label>
    <length>1</length>
    <type>Text</type>
</CustomField>