UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Credit_Reason__c.field-meta.xml
<CustomField>
    <fullName>CAP_Credit_Reason__c</fullName>
    <label>Credit Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CAP_Request_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Order Error</fullName>
            </value>
            <value>
                <fullName>Equipment (UEC)</fullName>
            </value>
            <value>
                <fullName>ETF</fullName>
            </value>
            <value>
                <fullName>Misquote</fullName>
            </value>
            <value>
                <fullName>Missed Commitment</fullName>
            </value>
            <value>
                <fullName>NRC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Service Affecting Outage</fullName>
            </value>
            <value>
                <fullName>Unhappy with Product/Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>