UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>CAP_Credit_Type__c</fullName>
    <label>Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CAP_Request_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Billing/Other</fullName>
            </value>
            <value>
                <fullName>Courtesy</fullName>
            </value>
            <value>
                <fullName>LD</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>