UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Customer_BTN__c.field-meta.xml
<CustomField>
    <fullName>CAP_Customer_BTN__c</fullName>
    <label>Customer BTN</label>
    <type>Phone</type>
</CustomField>