UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Customer_supplied_supporting_docs__c.field-meta.xml
<CustomField>
    <fullName>CAP_Customer_supplied_supporting_docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer supplied supporting docs</label>
    <type>Checkbox</type>
</CustomField>