UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>CAP_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>