UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Date_of_Error_Causing_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>CAP_Date_of_Error_Causing_Adjustment__c</fullName>
    <label>Date of Error Causing Adjustment?</label>
    <type>Date</type>
</CustomField>