UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Error_Corrected__c.field-meta.xml
<CustomField>
    <fullName>CAP_Error_Corrected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Error Corrected?</label>
    <type>Checkbox</type>
</CustomField>