UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Negotiate_credit_amount_attempted__c.field-meta.xml
<CustomField>
    <fullName>CAP_Negotiate_credit_amount_attempted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiate credit amount attempted?</label>
    <type>Checkbox</type>
</CustomField>