UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>CAP_Negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAP Negotiation</label>
    <type>Checkbox</type>
</CustomField>