UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Order_Entry_Contact_FTR__c.field-meta.xml
<CustomField>
    <fullName>CAP_Order_Entry_Contact_FTR__c</fullName>
    <label>Order Entry Contact (FTR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>