UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Quoting_Contact_FTR__c.field-meta.xml
<CustomField>
    <fullName>CAP_Quoting_Contact_FTR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quoting Contact (FTR)</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>AccountExec</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>CSA</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases_CAP_QuotingContact</relationshipName>
    <type>Lookup</type>
</CustomField>