UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Reason_for_Error__c.field-meta.xml
<CustomField>
    <fullName>CAP_Reason_for_Error__c</fullName>
    <label>Reason for Error?</label>
    <type>TextArea</type>
</CustomField>