UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>CAP_Request_Type__c</fullName>
    <label>CAP Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Debit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>