UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_Tool__c.field-meta.xml
<CustomField>
    <fullName>CAP_Tool__c</fullName>
    <defaultValue>&quot;http://cap.corp.ftr.com&quot;</defaultValue>
    <label>CAP Tool</label>
    <type>Url</type>
</CustomField>