UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CAP_What_is_the_error__c.field-meta.xml
<CustomField>
    <fullName>CAP_What_is_the_error__c</fullName>
    <label>What is the error?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>