UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Management Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases (Contract Renewal)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>