UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <label>Case Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>