UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Case_Owners_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Owners_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owners Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>