UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Case_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason_Other__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>911/Erate</fullName>
            </value>
            <value>
                <fullName>Assisting Other Departments</fullName>
            </value>
            <value>
                <fullName>Billing matter resolved</fullName>
            </value>
            <value>
                <fullName>COBRA Billing Portal</fullName>
            </value>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Conf Calls</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>CSR</fullName>
            </value>
            <value>
                <fullName>Customer service issue resolved</fullName>
            </value>
            <value>
                <fullName>Design Issues</fullName>
            </value>
            <value>
                <fullName>Directory</fullName>
            </value>
            <value>
                <fullName>Documents/Forms</fullName>
            </value>
            <value>
                <fullName>EDI</fullName>
            </value>
            <value>
                <fullName>Enterprise Portal</fullName>
                <label>Enterprise Portal (Orders &amp; TT&apos;s Only)</label>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>ISP Info</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>MFBA</fullName>
            </value>
            <value>
                <fullName>Network matter resolved</fullName>
            </value>
            <value>
                <fullName>PreQual</fullName>
            </value>
            <value>
                <fullName>Pricing/Quote</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Sales Request</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>SE</fullName>
            </value>
            <value>
                <fullName>Site Visit</fullName>
            </value>
            <value>
                <fullName>System Issues</fullName>
            </value>
            <value>
                <fullName>Traffic Study</fullName>
            </value>
            <value>
                <fullName>TTL</fullName>
            </value>
            <value>
                <fullName>Verify Products/Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>