UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>Used on the Solution Architect page layout</description>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certification</fullName>
            </value>
            <value>
                <fullName>Managed Cloud IT</fullName>
            </value>
            <value>
                <fullName>Product Enhancement Project</fullName>
            </value>
            <value>
                <fullName>Product Revenue</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Training Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>