UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CCaaS_Internal_Call_Completed__c.field-meta.xml
<CustomField>
    <fullName>CCaaS_Internal_Call_Completed__c</fullName>
    <description>Created for Lorraine Joiner for UC Hot Cut case 10/2020`</description>
    <inlineHelpText>Select yes/no if call completed.  If no, coordinate new date with CCaaS PM</inlineHelpText>
    <label>CCaaS Internal Call Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>