UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CCaaS_Internal_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>CCaaS_Internal_Call_Scheduled_Date__c</fullName>
    <description>Add for Lorraine Joiner for UC Hot Cut Case 10/2020</description>
    <inlineHelpText>Add date once  coordinated with CCaaS PM</inlineHelpText>
    <label>CCaaS Internal Call Scheduled Date</label>
    <type>Date</type>
</CustomField>