UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CCaaS_Schedule_Hot_Cut_Date__c.field-meta.xml
<CustomField>
    <fullName>CCaaS_Schedule_Hot_Cut_Date__c</fullName>
    <description>Created for Lorraine Joiner for UC Hot Cut case.  10/2020</description>
    <inlineHelpText>Populate date once coordinated with CCaaS PM</inlineHelpText>
    <label>CCaaS Schedule Hot Cut Date</label>
    <type>Date</type>
</CustomField>