UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CDC_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>CDC_Complete_Date__c</fullName>
    <description>Used on the UCaas PM case</description>
    <inlineHelpText>Enter the date the CDC is completed.</inlineHelpText>
    <label>CDC Complete Date</label>
    <type>Date</type>
</CustomField>