UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/CDC_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>CDC_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for Lorraine Joiner UC Hot Cut Case 10/2020```</description>
    <inlineHelpText>Check when CDC is reviewed -TNS added -CDC  uploaded</inlineHelpText>
    <label>CDC Review Complete</label>
    <type>Checkbox</type>
</CustomField>