UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Chance_of_Winning__c.field-meta.xml
<CustomField>
    <fullName>Chance_of_Winning__c</fullName>
    <inlineHelpText>Populates based on the Win Probability Score</inlineHelpText>
    <label>Chance of Winning</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Null</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Typical / Average</fullName>
            </value>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Exceptional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>