UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Change_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Quantity__c</fullName>
    <label>Change Order Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>