UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Add</fullName>
            </value>
            <value>
                <fullName>Change</fullName>
            </value>
            <value>
                <fullName>Disconnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>