UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Changed_M6_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Changed_M6_Due_Date__c</fullName>
    <label>Changed M6 Due Date</label>
    <type>Date</type>
</CustomField>