UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Changed_M6_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Changed_M6_Order_Number__c</fullName>
    <label>Changed M6 Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>