UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/ChangeOrder_DateReturnedToCOE__c.field-meta.xml
<CustomField>
    <fullName>ChangeOrder_DateReturnedToCOE__c</fullName>
    <label>Date Returned to COE</label>
    <type>Date</type>
</CustomField>