UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/ChangeOrder_ProvidedToTAMCO__c.field-meta.xml
<CustomField>
    <fullName>ChangeOrder_ProvidedToTAMCO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provided to TAMCO</label>
    <type>Checkbox</type>
</CustomField>