UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/ChangeOrder_Type__c.field-meta.xml
<CustomField>
    <fullName>ChangeOrder_Type__c</fullName>
    <label>Change Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Cost Change Order</fullName>
            </value>
            <value>
                <fullName>Adds and Returns Change Order</fullName>
            </value>
            <value>
                <fullName>Adds Only Change Order</fullName>
            </value>
            <value>
                <fullName>Returns Only Change Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>