UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Changes_Provided_to_Leasing_Company__c.field-meta.xml
<CustomField>
    <fullName>Changes_Provided_to_Leasing_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for ABS Job Change Order Shonda Cann 5/2021 TMM</description>
    <inlineHelpText>Check when leasing company has been notified of the changes.</inlineHelpText>
    <label>Changes Provided to Leasing Company</label>
    <type>Checkbox</type>
</CustomField>