UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Churn_Description__c.field-meta.xml
<CustomField>
    <fullName>Churn_Description__c</fullName>
    <label>Churn Description</label>
    <type>TextArea</type>
</CustomField>