UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Churn_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Churn_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>Churn Identifier</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>