UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Churn_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Reason__c</fullName>
    <label>Churn Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Services-+ Revenue</fullName>
            </value>
            <value>
                <fullName>Adjustment-Credits Issued</fullName>
            </value>
            <value>
                <fullName>Closure-Business or Location</fullName>
            </value>
            <value>
                <fullName>Cost Reduction-Customer Initiated</fullName>
            </value>
            <value>
                <fullName>Frontier Anywhere-Moved out of billing system</fullName>
            </value>
            <value>
                <fullName>FTR-Initiated</fullName>
            </value>
            <value>
                <fullName>Link/Unlink-Incorrect Customer Number</fullName>
            </value>
            <value>
                <fullName>Master Summary-Billing Change</fullName>
            </value>
            <value>
                <fullName>Module-Customer Number/Non Frontier</fullName>
            </value>
            <value>
                <fullName>Non Payment-Collections</fullName>
            </value>
            <value>
                <fullName>Order Entry Error-Incorrect/Missing S&amp;E</fullName>
            </value>
            <value>
                <fullName>Port Out-Wholesale</fullName>
            </value>
            <value>
                <fullName>Pricing-Competition</fullName>
            </value>
            <value>
                <fullName>Renewal-Write Down</fullName>
            </value>
            <value>
                <fullName>Service Reliability-Repair issues</fullName>
            </value>
            <value>
                <fullName>Technology-Not Available</fullName>
            </value>
            <value>
                <fullName>Temporary-Seasonal/Vacation services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>