UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Churn_Review__c.field-meta.xml
<CustomField>
    <fullName>Churn_Review__c</fullName>
    <description>Created for Sarah Jarvis for the Connect Call Case.  Case 00853162 10/21</description>
    <inlineHelpText>Note any review of Churn related items, if none, enter None.</inlineHelpText>
    <label>Churn Review</label>
    <length>7500</length>
    <type>Html</type>
</CustomField>