UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Churn_Risk__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk__c</fullName>
    <description>Created for Skip Lineberg for Centriam Chur Alert 11/2020</description>
    <label>Churn Risk</label>
    <length>10</length>
    <type>Text</type>
</CustomField>