UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/ClosedCase__c.field-meta.xml
<CustomField>
    <fullName>ClosedCase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Case</label>
    <type>Checkbox</type>
</CustomField>