UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/COA_Date__c.field-meta.xml
<CustomField>
    <fullName>COA_Date__c</fullName>
    <label>COA Date</label>
    <type>Date</type>
</CustomField>