UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/COA_WelcomePacketSentDate__c.field-meta.xml
<CustomField>
    <fullName>COA_WelcomePacketSentDate__c</fullName>
    <label>Welcome Packet Sent Date</label>
    <type>Date</type>
</CustomField>