UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/COA_WIPNotificationDate__c.field-meta.xml
<CustomField>
    <fullName>COA_WIPNotificationDate__c</fullName>
    <label>WIP Notification Date</label>
    <type>Date</type>
</CustomField>