UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Codes__c.field-meta.xml
<CustomField>
    <fullName>Codes__c</fullName>
    <label>Codes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Non-Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>