UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Codes_to_be_Added__c.field-meta.xml
<CustomField>
    <fullName>Codes_to_be_Added__c</fullName>
    <label>Codes to be Added</label>
    <length>255</length>
    <type>Text</type>
</CustomField>