UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Collections_Summary__c.field-meta.xml
<CustomField>
    <fullName>Collections_Summary__c</fullName>
    <description>Created for Sarah Jarvis\Dan McCafferty for Connect Call case page layout (Case 00793739, 2021_08)</description>
    <inlineHelpText>Summarize any ongoing Collections issues.  If none, enter None.</inlineHelpText>
    <label>Collections Summary</label>
    <length>500</length>
    <type>Html</type>
</CustomField>