UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Committed_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Committed_Completion_Date__c</fullName>
    <description>Created for Randall Meeks, Bill Holomon Case 00767403 3/2021 Training Request Case</description>
    <label>Committed Completion Date</label>
    <type>Date</type>
</CustomField>