UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Communicated_Date__c.field-meta.xml
<CustomField>
    <fullName>Communicated_Date__c</fullName>
    <description>This is used for the Commercial Sales Operations Cases for Vlocity Team Use Only section requested by Kim Kortz</description>
    <label>Communicated Date</label>
    <type>Date</type>
</CustomField>