UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Communicated_Via__c.field-meta.xml
<CustomField>
    <fullName>Communicated_Via__c</fullName>
    <description>This is used on the Commercial Sales case for the Vlocity Team Use Only section for Kim Kortz 3/5/2020</description>
    <label>Communicated Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chatter to Case Submitter</fullName>
            </value>
            <value>
                <fullName>Chatter to All</fullName>
            </value>
            <value>
                <fullName>Update Training Documents</fullName>
            </value>
            <value>
                <fullName>Email to All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>