UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <defaultValue>&quot;001&quot;</defaultValue>
    <label>Company Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>