UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <inlineHelpText>What is driving the need for change? (e.g. service disruptions, cost, contract expiration)  What is the impact to customer if NO change is made?</inlineHelpText>
    <label>Compelling Event</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>