UCF-APR2.4/ftr main/force-app/main/default/objects/Case/fields/Compelling_solution_or_Pricing_Exercise__c.field-meta.xml
<CustomField>
    <fullName>Compelling_solution_or_Pricing_Exercise__c</fullName>
    <inlineHelpText>What is our honest assessment of winning this opportunity? Should we fully allocate our resources, or should we price with the least amount of effort.</inlineHelpText>
    <label>Compelling solution or Pricing Exercise</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>